<resources>
    <string name="app_name">Calorie Control</string>
    <string name="salvar">Save</string>
    <string name="limpar">Clear options</string>
    <string name="verduras_e_legumes">Greens and Vegetables</string>
    <string name="frutas">Fruits</string>
    <string name="leite_e_derivados">Milk and milk derivatives</string>
    <string name="carnes_e_ovos">Meat and eggs</string>
    <string name="leguminosas_e_oleaginosas">Legumes and oilseeds</string>
    <string name="oleos_e_gorduras">"Oil and fat "</string>
    <string name="acucares_e_doces">"Sugar and candies "</string>
    <string name="pao">Bread</string>
    <string name="feijao">Bean</string>
    <string name="azeite">Olive oil</string>
    <string name="cenoura">Carrot</string>
    <string name="cerveja">Beer</string>
    <string name="chocolate">Chocolate</string>
    <string name="refrigerante">Soda</string>
    <string name="tilapia">Fresh Tilapia</string>
    <string name="tomate">tomato</string>
    <string name="valores_limpos">Values were cleared</string>
    <string name="foi_clicado">" Was clicked"</string>
    <string name="remover">Remove</string>
    <string name="cadastrar_refeicao">Register meal</string>
    <string name="sobre">About</string>
    <string name="sobre_objetivo">"Daily Calories Intake Control App "</string>
    <string name="autor">Fábio Previatti</string>
    <string name="minhas_refeicoes">My Meals</string>
    <string name="adicionar">Add</string>
    <string name="email_autor">fpreviatti@alunos.utfpr.edu.br</string>
    <string name="curso">Java Development for Mobile Devices</string>
    <string name="descricao_aplicativo">"Application developed to help users to control their daily calories intake. "</string>
    <string name="calorias_diarias">Daily Calories: 2500/</string>
    <string name="calorias_diarias_total">0</string>
    <string name="data_atual">Day:</string>
    <string name="dia_atual">date</string>
    <string name="refeicao">Meal</string>
    <string name="calorias_refeicao">Calories</string>
    <string name="horario_refeicao">Meal time:</string>
    <string name="horario_de_cada_refeicao">00:00</string>
    <string name="identificador_refeicao">1</string>
    <string name="informe_um_apelido_para_a_refeicao">Inform a Nickname To The Meal</string>
    <string name="cafe_da_manha">Breakfast</string>
    <string name="almoco">Launch</string>
    <string name="janta">Dinner</string>
    <string name="apelido_refeicao">Inform the Meal\'s Nickname</string>
    <string name="texto_tipo_refeicao">Meal</string>
    <string name="primeira_refeicao_do_dia">First meal of the day</string>
    <string name="textView_esta_de_dieta">Are you on a diet?</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="obrigatorio_informar_se_esta_de_dieta">Please inform if you are on a diet</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="favor_inserir_alimentos">Please insert foods to the meal</string>
    <string name="favor_inserir_apelido">Please insert a nickname to the meal</string>
    <string name="limpou_valores">Values Cleared</string>
    <string name="cor_vermelha">#FF0000</string>
    <string name="modo_noturno">Dark Theme</string>
    <string name="quantidade">Quantity:</string>
    <string name="calorias_1_quantidade">Calories (1 quantity)</string>
    <string name="carboidratos">Carbohydrates</string>
    <string name="arroz">Rice</string>
    <string name="zero">0</string>
    <string name="unidade">unit(s)</string>
    <string name="tema_noturno">Dark Theme</string>
    <string name="tema_classico">Classic Theme</string>
    <string name="colheres_de_sopa">soup spoon(s)</string>
    <string name="lata_350ml">can(s) 350ml</string>
    <string name="conchas">bean spoon(s)</string>
    <string name="barra_90g">chocolate bar(s) 90g</string>
    <string name="file_115g_cada">fillet(s) - 115g each</string>
    <string name="aviso">Notification</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="deseja_realmente_apagar_esta_refeicao">Do you really want to erase this meal?</string>
    <string name="horario">Time</string>
    <string name="selecione_horario">Select time</string>
    <string name="favor_inserir_horario_refeicao">Please inform the meal time</string>

</resources>