<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListagemDeRefeicoesActivity">

    <TextView
        android:id="@+id/textViewDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_atual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTotalCalorias"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDataDeHoje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewDia"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTotalCalorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/calorias_diarias"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotalDeCaloriasDiarias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listViewRefeicoes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalCalorias" />

    <TextView
        android:id="@+id/textViewTotalDeCaloriasDiarias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorias_diarias_total"
        app:layout_constraintStart_toEndOf="@+id/textViewTotalCalorias"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>